--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "tsc:nodemon": "nodemon",
     "jest:coverage": "jest --coverage",
     "jest:watch": "jest --watch",
-    "swagger:gen": "swaggerGen -c ./swagger.config.json"
+    "swagger:gen": "swaggerGen -c ./swagger.config.json",
+    "start": "npm run clean:dist; npm run tsc:prod:build && npm run tsc:prod:run"
   },
   "repository": {
     "type": "git",
