--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "clean:dist": "rm -r dist/",
-    "clean:db": "rm -r database.db",
+    "clean:dist": "rm -rf dist/",
     "tsc:prod:build": "tsc",
     "tsc:prod:run": "node dist/src",
     "tsc:dev": "ts-node src",
@@ -16,7 +15,7 @@
     "jest:coverage": "jest --coverage",
     "jest:watch": "jest --watch",
     "swagger:gen": "swaggerGen -c ./swagger.config.json",
-    "start": "npm run tsc:prod:run",
+    "start": "npm run swagger:gen && npm run tsc:prod:run",
     "postinstall": "tsc"
   },
   "repository": {
@@ -30,9 +29,11 @@
   },
   "homepage": "https://github.com/Dzidzileyla/typescript-template#readme",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "sqlite3": "^5.0.2",
+    "mongodb-memory-server": "^6.9.6",
+    "mongoose": "^5.12.13",
     "superagent": "^6.1.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jest-plugin-context": "^2.9.4",
+    "@types/node": "^15.12.1",
     "@types/superagent": "^4.1.11",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.4",
