fix problem with mongo, add tests and add debug config

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "tsc:prod:build": "tsc",
     "tsc:prod:run": "node dist/src",
     "tsc:dev": "ts-node src",
+    "tsc:debug": "node --nolazy -r ts-node/register src",
     "tsc:nodemon": "nodemon",
+    "tsc:nodemon:debug": "nodemon --inspect=0.0.0.0:9229 index.ts",
     "jest:coverage": "jest --coverage",
     "jest:watch": "jest --watch",
     "swagger:gen": "swaggerGen -c ./swagger.config.json",
@@ -48,12 +50,14 @@
     "@types/jest": "^26.0.23",
     "@types/jest-plugin-context": "^2.9.4",
     "@types/node": "^15.12.1",
+    "@types/sinon": "^10.0.2",
     "@types/superagent": "^4.1.11",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.4",
     "jest-plugin-context": "^2.9.0",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.7",
+    "sinon": "^11.1.1",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0"
